<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SignUpActivity"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/gradient">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/heart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_user_name"
        android:layout_marginTop="180dp"
        android:layout_marginStart="50dp" />

    <TextView
        android:id="@+id/Tender"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Tender"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/et_username"
        app:layout_constraintStart_toEndOf="@+id/Logo" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/et_username"
        android:layout_marginTop="@dimen/margin_basex4"
        />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="gmail.com"
        app:layout_constraintTop_toTopOf="@+id/tv_user_name"
        app:layout_constraintStart_toEndOf="@+id/tv_user_name"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:hint="******"
        app:layout_constraintTop_toBottomOf="@+id/et_username"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_base"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toTopOf="@+id/tv_password"
        app:layout_constraintStart_toEndOf="@+id/tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn_background_sign_up"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <com.developer.gbuttons.GoogleSignInButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background_google"
        android:text="Sign in via Google"
        app:layout_constraintBottom_toTopOf="@+id/btn_fb"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/margin_base"
        android:gravity="center"
        android:layout_marginBottom="5dp">


    </com.developer.gbuttons.GoogleSignInButton>



    <Button
        android:id="@+id/btn_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_via_fb"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/btn_background_fb"
        android:padding="5dp"
        android:drawableLeft="@drawable/ic_facebook"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background_sign_up"
        android:text="@string/signup"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>